
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


typedef TYPE_1__* xmlParserInputBufferPtr ;
typedef int xmlParserInputBuffer ;
typedef int xmlCharEncoding ;
struct TYPE_5__ {int compressed; int * closecallback; int * readcallback; void* context; int * raw; int * encoder; int * buffer; } ;


 int memset (TYPE_1__*,int ,size_t) ;
 int * xmlBufCreateSize (int) ;
 int * xmlBufCreateStatic (void*,size_t) ;
 int xmlDefaultBufferSize ;
 int xmlFree (TYPE_1__*) ;
 int * xmlGetCharEncodingHandler (int ) ;
 int xmlIOErrMemory (char*) ;
 scalar_t__ xmlMalloc (int) ;

xmlParserInputBufferPtr
xmlParserInputBufferCreateStatic(const char *mem, int size,
                                 xmlCharEncoding enc) {
    xmlParserInputBufferPtr ret;

    if (size < 0) return(((void*)0));
    if (mem == ((void*)0)) return(((void*)0));

    ret = (xmlParserInputBufferPtr) xmlMalloc(sizeof(xmlParserInputBuffer));
    if (ret == ((void*)0)) {
 xmlIOErrMemory("creating input buffer");
 return(((void*)0));
    }
    memset(ret, 0, (size_t) sizeof(xmlParserInputBuffer));
    ret->buffer = xmlBufCreateStatic((void *)mem, (size_t) size);
    if (ret->buffer == ((void*)0)) {
        xmlFree(ret);
 return(((void*)0));
    }
    ret->encoder = xmlGetCharEncodingHandler(enc);
    if (ret->encoder != ((void*)0))
        ret->raw = xmlBufCreateSize(2 * xmlDefaultBufferSize);
    else
        ret->raw = ((void*)0);
    ret->compressed = -1;
    ret->context = (void *) mem;
    ret->readcallback = ((void*)0);
    ret->closecallback = ((void*)0);

    return(ret);
}
